Fix footer button alignment and colors

--- a/archipelago.css
+++ b/archipelago.css
@@ -48,7 +48,7 @@ header {
         padding-left: 1em;
     }
 
-    header ul {
+    ul {
         margin: 0;
         padding: 0 3em 0 0;
         list-style: none;
@@ -56,7 +56,7 @@ header {
         gap: 32px;
     }
 
-    header a {
+    a {
         text-decoration: none;
         color: #e5e7eb;
     }
@@ -333,4 +333,50 @@ footer {
     color: #f9faf8;
     background-color: #000;
     border-top: 2px solid #4f4f4f;
+    gap: 50px;
+    font-family: Syne;
 }
+
+    .newsletter {
+        border: 4px solid #4f4f4f;
+        border-radius: 24px;
+        padding: 24px;
+        width: 500px;
+    }
+
+        .newsletter .title {
+            margin-bottom: 24px;
+            font-size: 18px;
+            font-weight: 700;
+        }
+
+        .newsletter #email {
+            background-color: black;
+            border: 2px solid #4f4f4f;
+            border-radius: 32px;
+            padding-left: 23px;
+            font-family: 'Syne';
+            font-size: 18px;
+            width: 290px;
+            margin-right: 15px;
+        }
+
+        .newsletter .signup {
+            text-transform: uppercase;
+            background-color: white;
+            color: black;
+            border-radius: 32px;
+            font-size: 16px;
+            font-family: Syne;
+        }
+
+        .newsletter .signup,
+        .newsletter #email {
+            height: 40px;
+        }
+
+        .newsletter ul {
+            flex-direction: column;
+            margin: 20px;
+            gap: 20px;
+        }
